2004-10-15  Michael Natterer  <mitch@gimp.org>

	* app/actions/images-commands.[ch]
	* app/actions/templates-commands.[ch]: made some public functions
	private or removed them entirely by folding their code into their
	callers. They used to be passed as function pointers to widgets in
	the pre action-based dialog buttons era.

2004-10-15  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/quit-dialog.c: raise the image's displays on
	double-click in the dirty image list.

2004-10-15  Michael Natterer  <mitch@gimp.org>

	Fixed bug #155328:

	* app/actions/vectors-actions.c (vectors_actions_update): don't
	set the "selection to path" actions sensitive if there is no
	image.

	* app/widgets/gimpitemtreeview.c: update the UI manager after
	setting the view's image. Connect to GimpImage::flush() and
	update the UI manager in the callback, too.

2004-10-15  Michael Natterer  <mitch@gimp.org>

	* app/actions/view-actions.c (view_zoom_actions): removed
	duplicate "view-zoom-in" action (cut'n'paste error) and fixed the
	swapped "zoom in/out a lot" actions. Fixes bug #155446.

2004-10-15  Sven Neumann  <sven@gimp.org>

	* Made 2.1.7 release.

2004-10-15  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptransformoptions.c: removed the "Density" label.
	It wasn't helpful and caused the transform options to be wider than
	necessary.

	* app/tools/gimpblendoptions.c
	* app/tools/gimppaintoptions-gui.c
	* app/tools/gimptransformoptions.c: let combo boxes expand
	horizontally like we do in other (all?) dialogs.

	* app/widgets/gimptemplateeditor.c
	(gimp_template_editor_aspect_callback): update the pixel size label.

2004-10-15  Sven Neumann  <sven@gimp.org>

	* data/images/gimp-splash.png: new splash by Jimmac.

2004-10-15  DindinX  <dindinx@gimp.org>

	* plug-ins/common/scatter_hsv.c: ported to GimpDrawablePreview, and
	removed many lines of codes.

2004-10-14  Kevin Cozens  <kcozens@cvs.gimp.org>

	* plug-ins/script-fu/scripts/neon.scm: Fixed minor error in script.